# frappe_metabase

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
frappe_metabase/: hooks.py  modules.txt
frappe_metabase/api/: embed.py
frappe_metabase/frappe_metabase/doctype/metabase_dashboard/: metabase_dashboard.js  metabase_dashboard.json  metabase_dashboard.py
frappe_metabase/frappe_metabase/doctype/metabase_param/: metabase_param.json  metabase_param.py
frappe_metabase/frappe_metabase/doctype/metabase_question/: metabase_question.js  metabase_question.json  metabase_question.py
frappe_metabase/frappe_metabase/doctype/metabase_role/: metabase_role.json  metabase_role.py
frappe_metabase/frappe_metabase/doctype/metabase_settings/: metabase_settings.js  metabase_settings.json  metabase_settings.py
frappe_metabase/frappe_metabase/page/metabase_gallery/: metabase_gallery.js  metabase_gallery.json
frappe_metabase/public/css/: metabase_embed.css
frappe_metabase/public/js/: metabase_embed.js
frappe_metabase/utils/: connection.py  params.py  token.py
