[project]
name = "frappe-metabase"
authors = [
    { name = "Frappe Metabase Contributors" }
]
description = "Metabase dashboard embedding for Frappe"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
